<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single"
           android:menuCategory="container"
        >
        <item android:id="@+id/home"
            android:title="@string/home"

           />
        <item android:id="@+id/news"
            android:title="@string/news"

           />
        <item android:id="@+id/perspectives"
            android:title="@string/prespectives"

           />
        <item android:id="@+id/about"
            android:title="@string/about"

           />
        <item android:id="@+id/profile"
            android:title="@string/profile"
            />

        <item android:id="@+id/friends"
            android:title="@string/friends"

           />
        <item android:id="@+id/groups"
            android:title="@string/groups"
           />
        <item android:id="@+id/luca_dezzani"
            android:title="@string/luca_dezzani"
           
            />
        <item android:id="@+id/logout"
            android:title="@string/logout"

            />

    </group>
</menu>