<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="handler" type="com.sumit.igeahub.activity.LoginActivity"/>
    </data>

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:orientation="vertical"
   >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_weight="3.5"
                android:layout_height="0dp"
               >
                <ImageView
                    android:id="@+id/header_bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_50sdp"
                    android:background="@drawable/header_bg"/>

                <ImageView
                   android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:background="@drawable/logo"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    />

            </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="6.5"
        android:paddingLeft="@dimen/acticity_default_margin_20dp"
        android:orientation="vertical"
        android:paddingRight="@dimen/acticity_default_margin_20dp"
        android:paddingTop="@dimen/acticity_default_margin_10dp"
        android:layout_height="0dp">

        <include
            android:id="@+id/vw_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/material_edittext"/>
        <include
            android:id="@+id/vw_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/material_edittext"/>
        <TextView
            android:id="@+id/tv_login"
          style="@style/App_Theme_Style_MW"
            android:background="@color/button_bg_clr"
            android:gravity="center"
            android:layout_marginTop="@dimen/acticity_default_margin_14dp"
            android:textSize="@dimen/txt_size_16sp"
            android:textAllCaps="true"
            android:onClick="actionLogin"
            android:padding="@dimen/acticity_default_margin_10dp"
            android:textColor="@color/black"
            android:text="@string/action_sign_in_short"/>
        <TextView
            android:id="@+id/tv_forgot_pass"
            style="@style/App_Theme_Style_MW"
            android:gravity="center"
            android:textSize="@dimen/txt_size_12sp"
            android:padding="@dimen/acticity_default_margin_10dp"
            android:text="@string/forgot_password"/>
        <TextView

            style="@style/App_Theme_Style_MW"
            android:gravity="center"
            android:textSize="@dimen/txt_size_12sp"
            android:padding="@dimen/acticity_default_margin_10dp"
            android:onClick="createNewAcc"
            android:text="@string/signin_with_scocial_networks"/>
        <LinearLayout
           style="@style/App_Theme_Style_MW"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/iv_fb"
               style="@style/App_Theme_Style_WW"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:paddingTop="@dimen/acticity_default_margin_10dp"
                android:paddingBottom="@dimen/acticity_default_margin_10dp"
                android:src="@drawable/fb"/>
            <ImageView
                android:id="@+id/iv_twitter"
                style="@style/App_Theme_Style_WW"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:paddingTop="@dimen/acticity_default_margin_10dp"
                android:paddingBottom="@dimen/acticity_default_margin_10dp"
                android:src="@drawable/twitter"/>

            <ImageView
                android:id="@+id/iv_linkedin"
                style="@style/App_Theme_Style_WW"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:paddingTop="@dimen/acticity_default_margin_10dp"
                android:paddingBottom="@dimen/acticity_default_margin_10dp"
                android:src="@drawable/in"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                style="@style/App_Theme_Style_WW"
                android:gravity="center"
                android:textSize="@dimen/txt_size_12sp"
                android:padding="@dimen/acticity_default_margin_10dp"
                android:text="@string/dont_have_account"/>
            <TextView
                android:id="@+id/tv_create_account"
                style="@style/App_Theme_Style_WW"
                android:gravity="center"
                android:textSize="@dimen/txt_size_12sp"
                android:onClick="createNewAcc"
                android:textColor="@android:color/holo_blue_light"
                android:padding="@dimen/acticity_default_margin_10dp"
                android:text="@string/create_one"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
    </layout>
